--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 60px 180px;
     position: relative;
 }
 
