--- a/src/components/ProductShowcase/productShowcase.css
+++ b/src/components/ProductShowcase/productShowcase.css
@@ -1,5 +1,5 @@
 .product-showcase {
-  width: 100vw;
+  width: 100%;
   height: 800px;
   overflow: hidden;
   background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/video-bg.png);
