--- a/src/components/BrandsLove/brandsLove.css
+++ b/src/components/BrandsLove/brandsLove.css
@@ -20,4 +20,13 @@
     background-size: 100%;
     height: 50px;
     width: 100%;
+    background-image: url("/src/common/images/brands-desktop.png");
+}
+
+@media all and (max-width: 768px) {
+    .brands-love-banner {
+        background-image: url("/src/common/images/brands-mobile.png");
+        min-height: 250px;
+        background-size: contain;
+    }
 }
