--- a/src/components/common/Sidebar/sidebar.css
+++ b/src/components/common/Sidebar/sidebar.css
@@ -3,7 +3,7 @@
     width: 100vw;
     z-index: 10;
     margin: 0;
-    position: absolute;
+    position: fixed;
     transform: translateX(100%);
     background-color: var(--bg-black);
     display: flex;
