--- a/src/common/styles/variable.css
+++ b/src/common/styles/variable.css
@@ -3,4 +3,6 @@
     --white: #f8f8f8;
     --bg-grey: #272b2d6e;
     --text-black: #212426;
+    --mobile-box-shadow: rgb(176 176 178 / 16%) 0px -5px 6px 0px inset, rgb(0 0 0 / 24%) 4px 6px 11px 1px inset;
+    --mobile-bg: rgb(33, 36, 38);
 }
