--- a/src/common/styles/variable.css
+++ b/src/common/styles/variable.css
@@ -5,4 +5,5 @@
     --text-black: #212426;
     --mobile-box-shadow: rgb(176 176 178 / 16%) 0px -5px 6px 0px inset, rgb(0 0 0 / 24%) 4px 6px 11px 1px inset;
     --mobile-bg: rgb(33, 36, 38);
+    --bg-green: #027757;
 }
