--- a/src/common/styles/commonClasses.css
+++ b/src/common/styles/commonClasses.css
@@ -16,9 +16,19 @@
     flex-direction: column;
 }
 
+.footer {
+    font-size: 40px;
+    font-weight: 600;
+    padding: 0px 0px 20px;
+}
+
 @media all and (max-width: 1279px) {
     .max-width {
         max-width: 80%;
+    }
+
+    .footer {
+        font-size: 32px;
     }
 }
 
@@ -30,6 +40,10 @@
     .none-mobile {
         display: none !important;
         overflow-x: hidden;
+    }
+
+    .footer {
+        font-size: 20px;
     }
 }
 
